--- a/src/css/home.css
+++ b/src/css/home.css
@@ -5,7 +5,7 @@
     font-size: 30px;
 }
 .card-body{
-    height: 15rem;
+    height: 100%;
 }
 
 .card{
@@ -14,8 +14,39 @@
 
 .text-date{
     border-radius: 50px;
+    border: 0;
 }
 
 * a{
     font-weight: bold;
+    text-decoration: none;
+}
+
+#logolink a:hover{
+    color: #0d6efd!important;
+}
+
+.dropdown-menu {
+    margin-top: 1rem;
+}
+
+.spanImg {
+    font-size: 3rem;
+}
+
+#logoImg {
+    width: 30%;
+    margin-bottom: 1rem;
+}
+
+.navbar.navbar-expand-lg {
+    background-color: white!important;
+}
+
+.container-sm {
+    background-color: #f8f9fa!important;
+}
+
+.button-filter {
+    width: 50%;
 }
